# LDAP-Sync

./: .env.example  .gitignore  conftest.py  main.py  pyproject.toml  requirements.txt  sync.py
docs/: active-members.md  pipeline.md
docs/img/: doc.vpp  service-architecture.drawio
models/: group.py  group_type.py  ldap_entry.py  user.py  user_account_control.py
src/: main.py
src/cli/: __init__.py  cli.py
src/common/: __init__.py  sync_model.py  syncable_model.py
src/congressus/: __init__.py  client.py  congressus_client.py  models.py
src/directories/active_directory/: __init__.py  active_directory_client.py  enums.py  schemas.py
src/directories/congressus/: congressus_client.py  models.py
src/directories/ldap/: ldap_client.py
src/directory_converters/: __init__.py  congressus_to_active_directory_converter.py  congressus_to_active_directory_mapper.py  congressus_to_ldap_converter.py
src/ldap/: __init__.py  ldap.py  ldap_client.py
src/ldap/models/: __init__.py  entry.py  group.py  organizational_unit.py  user.py
src/model_conversion/: __init__.py  congressus_to_ldap_converter.py
src/sync/: __init__.py  account_syncer.py  cli.py  exceptions.py  ldap_sync.py  principal_syncer.py  types.py
src/sync/factories/: __init__.py  ldap_model_factory.py
src/sync/types/: __init__.py  destination_client.py  models.py  source_client.py
tests/congressus/: conftest.py  test_client.py
tests/directories/active_directory/: test_active_directory_client.py
tests/ldap/: conftest.py  test_ldap.py
tests/sync/: test_principal_syncer.py
(+6 files in other folders)
