[project]
name = "DirectoryTools"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "ldap3>=2.9.1",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
]

[project.scripts]
dirtools = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-x -s --tb=long"
markers = [
    "integration: tests that hit real external services",
    "system: end-to-end system tests (require live dependencies)",
]
filterwarnings = [
    "ignore:tagMap is deprecated:DeprecationWarning",
    "ignore:typeMap is deprecated:DeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
